@@ -1,4 +1,4 @@
-/*	$NetBSD: ip_netbios_pxy.c,v 1.1.1.1.2.3 2002/10/18 13:16:48 itojun Exp $	*/
+/*	$NetBSD: ip_netbios_pxy.c,v 1.1.1.1.2.4 2002/11/27 08:35:21 itojun Exp $	*/
 
 /*
  * Simple netbios-dgm transparent proxy for in-kernel use.
@@ -34,7 +34,7 @@
  * Id: ip_netbios_pxy.c,v 1.1.2.3 2002/01/09 09:28:37 darrenr Exp
  */
 
-__KERNEL_RCSID(1, "$NetBSD: ip_netbios_pxy.c,v 1.1.1.1.2.3 2002/10/18 13:16:48 itojun Exp $");
+__KERNEL_RCSID(6, "$NetBSD: ip_netbios_pxy.c,v 1.1.1.1.2.4 2002/11/27 08:35:21 itojun Exp $");
 
 #define	IPF_NETBIOS_PROXY
 
